--- a/ToDoList/Views/Items/New.cshtml
+++ b/ToDoList/Views/Items/New.cshtml
@@ -2,15 +2,16 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>Hello friend!</title>
+    <title>To Do List</title>
   </head>
   <body>
-    <h1>To Do List</h1>
+    <h1>Add a new item to @Model.GetName()</h1>
 
-    <form action="/items" method="post">
-      <label for="description">Add a new item</label>
-      <input id="description" name="description" type="text">
-      <button type="submit">Submit</button>
+    <form action="/categories/@Model.GetId()/items" method="post">
+      <input id='categoryId' name='categoryId' type='hidden' value='@Model.GetId()'>
+      <label for="itemDescription">Item Description</label>
+      <input id="itemDescription" name="itemDescription" type="text">
+      <button type="submit">Add item</button>
     </form>
 
   </body>
