--- a/ToDoList/Views/Items/Show.cshtml
+++ b/ToDoList/Views/Items/Show.cshtml
@@ -1,6 +1,7 @@
 <h1>To Do List Item Details: </h1>
 
-<h2>@Model.GetDescription()</h2>
+<h2>@Model["item"].GetDescription()</h2>
+<h2>Category: @Model["category"].GetName()</h2>
 
-<a href='/items/new'>Add another item</a>
-<a href='/items'>View all items</a>
+<a href='/categories/@Model["category"].GetId()/items/new'>Add another item</a>
+<a href='/categories'>View all categories</a>
