--- a/ToDoList/Views/Items/index.cshtml
+++ b/ToDoList/Views/Items/index.cshtml
@@ -7,7 +7,13 @@
 {
   <p>You have no items in your to do list!</p>
 }
-
+@if (Model.Count !=0)
+{
+  @foreach (Item item in Model)
+  {
+  <li><a href='/items/@item.GetId()'>@item.GetDescription()</a></li>
+  }
+}
 
 </ul>
 <a href="/items/new">Add a new item.</a>
