Added ability to sort by duedate, fixed issue where adding new item did not add the date

--- a/ToDoList/Views/Items/New.cshtml
+++ b/ToDoList/Views/Items/New.cshtml
@@ -11,6 +11,8 @@
       <input id='categoryId' name='categoryId' type='hidden' value='@Model.GetId()'>
       <label for="itemDescription">Item Description</label>
       <input id="itemDescription" name="itemDescription" type="text">
+      <label for='dueDate'>Due date</label>
+      <input id='dueDate' name='dueDate' type='date'>
       <button type="submit">Add item</button>
     </form>
 
