--- a/ToDoList/Views/Categories/Show.cshtml
+++ b/ToDoList/Views/Categories/Show.cshtml
@@ -2,9 +2,10 @@
 <ol>
     @foreach (var item in @Model["items"])
     {
-        <li><a href='/categories/@Model["category"].GetId()/items/@item.GetId()'>@item.GetDescription()</a></li>
+        <li><a href='/categories/@Model["category"].GetId()/items/@item.GetId()'>@item.GetDescription() @item.GetDueDate()</a></li>
     }
 </ol>
 <p><a href='/categories/@Model["category"].GetId()/items/new'>Add a new item</a></p>
+<p><a href='/categories/@Model["category"].GetId()/itemssort'>Sort by duedate</a></p>
 <p><a href='/categories'>Return to category list.</a></p>
 <p><a href='/'>Return to Main page</a></p>
