Added category ID to items, updated all ItemTests to include this id

--- a/ToDoList/Views/Categories/Show.cshtml
+++ b/ToDoList/Views/Categories/Show.cshtml
@@ -2,7 +2,7 @@
 <ol>
     @foreach (var item in @Model["items"])
     {
-        <li><a href='/categories/@Model["category"].GetId()/items/@item.GetId()'>@item.GetDescription() @item.GetDueDate()</a></li>
+        <li><a href='/categories/@Model["category"].GetId()/items/@item.GetId()'>@item.GetDescription() @item.GetDueDate().ToString("MM/dd/yyyy")</a></li>
     }
 </ol>
 <p><a href='/categories/@Model["category"].GetId()/items/new'>Add a new item</a></p>
