--- a/ToDoList/Views/Items/Show.cshtml
+++ b/ToDoList/Views/Items/Show.cshtml
@@ -1,7 +1,8 @@
 <h1>To Do List Item Details: </h1>
 
-<h2>@Model["item"].GetDescription()</h2>
 <h2>Category: @Model["category"].GetName()</h2>
+<p>@Model["item"].GetDescription()</p>
 
-<a href='/categories/@Model["category"].GetId()/items/new'>Add another item</a>
+<a href='/categories/@Model["category"].GetId()/items/@Model["item"].GetId()/edit'>Edit this Item</a><br />
+<a href='/categories/@Model["category"].GetId()/items/new'>Add another item</a><br />
 <a href='/categories'>View all categories</a>
