--- a/ToDoList/Views/Items/index.cshtml
+++ b/ToDoList/Views/Items/index.cshtml
@@ -11,7 +11,7 @@
 {
   @foreach (Item item in Model)
   {
-  <li><a href='/items/@item.GetId()'>@item.GetDescription()</a></li>
+  <li><a href='/items/@item.GetId()'>@item.GetDescription() @item.GetDueDate().ToString("MM/dd/yyyy")</a></li>
   }
 }
 
