--- a/ToDoList/Views/Categories/Show.cshtml
+++ b/ToDoList/Views/Categories/Show.cshtml
@@ -1,10 +1,19 @@
-<h3>Here are all of the items in this category</h3>
-<ol>
+<h3>Here are all of the items in @Model["category"].GetName()</h3>
+
+@if (Model.Count == 0)
+{
+    <p>You have no items in this category.</p>
+}
+@if(Model.Count != 0)
+{
+    <ol>
     @foreach (var item in @Model["items"])
     {
         <li><a href='/categories/@Model["category"].GetId()/items/@item.GetId()'>@item.GetDescription() @item.GetDueDate().ToString("MM/dd/yyyy")</a></li>
     }
-</ol>
+    </ol>
+}
+
 <p><a href='/categories/@Model["category"].GetId()/items/new'>Add a new item</a></p>
 <p><a href='/categories/@Model["category"].GetId()/itemssort'>Sort by duedate</a></p>
 <p><a href='/categories'>Return to category list.</a></p>
