--- a/ToDoList/Views/Items/Show.cshtml
+++ b/ToDoList/Views/Items/Show.cshtml
@@ -3,10 +3,9 @@
 <h2>Category: @Model["category"].GetName()</h2>
 <p>@Model["item"].GetDescription()</p>
 
-<a href='/categories/@Model["category"].GetId()/items/@Model["item"].GetId()/edit'>Edit this Item</a>
+<a href='/categories/@Model["category"].GetId()/items/@Model["item"].GetId()/edit'>Edit this Item</a><br />
 
-<form action="/categories/@Model["category"].GetId()/items/@Model["item"].GetId()/delete" method="post">
-    <button type="submit">Delete</button>
-</form>
+<a href='/categories/@Model["category"].GetId()/items/@Model["item"].GetId()/delete'>Delete this Item</a>
+
 <a href='/categories/@Model["category"].GetId()/items/new'>Add another item</a><br />
 <a href='/categories'>View all categories</a>
