--- a/ToDoList/Views/Home/index.cshtml
+++ b/ToDoList/Views/Home/index.cshtml
@@ -1,3 +1,32 @@
 <h1>To Do List</h1>
-<h3><a href='/categories'>View categories</a></h3>
-<h3><a href='/categories/new'>Add a new category</a></h3>
+@if (Model.Count == 0)
+{
+    <p>You have no items in your to do list.</p>
+}
+@if(Model.Count != 0)
+{
+    <table>
+        <tr>
+            <th>Item</th>
+            <th>Due Date</th>
+        </tr>
+    @foreach (var item in @Model)
+    {
+        <tr>
+            <td><a href='/categories/@item.GetCategoryId()/items/@item.GetId()'>@item.GetDescription()</a></td>
+            <td>@item.GetDueDate().ToString("MM/dd/yyyy")</td>
+        </tr>
+    }
+    </table>
+}
+
+<table>
+    <tr>
+        <td>
+            <a href='/categories'>View categories</a>
+        </td>
+        <td>
+            <a href='/categories/new'>Add a new category</a>
+        </td>
+    </tr>
+</table>
