Applied Layout to all cshtml pages

--- a/ToDoList/Views/Categories/New.cshtml
+++ b/ToDoList/Views/Categories/New.cshtml
@@ -1,5 +1,8 @@
+
+@{
+  Layout = "_Layout";
+}
 <h1>Add a category</h1>
-<p>Add a category here:</p>
 
 <form action="/categories" method="post">
   <label for="categoryName">Category name</label>
@@ -7,5 +10,13 @@
   <button type="submit">Add</button>
 </form>
 
-<p><a href="/">Back home</a></p>
-<p><a href="/categories">Back to categories.</a></p>
+<table>
+    <tr>
+        <td>
+            <a href='/categories'>View categories</a>
+        </td>
+        <td>
+            <a href='/categories/new'>Add a new category</a>
+        </td>
+    </tr>
+</table>
