--- a/ToDoList/Views/Categories/Show.cshtml
+++ b/ToDoList/Views/Categories/Show.cshtml
@@ -1,3 +1,7 @@
+
+@{
+  Layout = "_Layout";
+}
 <h3>Here are all of the items in @Model["category"].GetName()</h3>
 
 @if (Model.Count == 0)
@@ -14,7 +18,17 @@
     </ol>
 }
 
-<p><a href='/categories/@Model["category"].GetId()/items/new'>Add a new item</a></p>
-<p><a href='/categories/@Model["category"].GetId()/itemssort'>Sort by duedate</a></p>
-<p><a href='/categories'>Return to category list.</a></p>
-<p><a href='/'>Return to Main page</a></p>
+<table>
+    <tr>
+        <td><a href='/categories/@Model["category"].GetId()/items/new'>Add a new item</a></td>
+        <td><a href='/categories/@Model["category"].GetId()/itemssort'>Sort by duedate</a></td>
+    </tr>
+    <tr>
+        <td>
+            <a href='/categories'>View categories</a>
+        </td>
+        <td>
+            <a href='/categories/new'>Add a new category</a>
+        </td>
+    </tr>
+</table>
