--- a/ToDoList/Views/Home/index.cshtml
+++ b/ToDoList/Views/Home/index.cshtml
@@ -1,4 +1,19 @@
+
+@{
+  Layout = "_Layout";
+}
 <h1>To Do List</h1>
+
+<form action="/categories/@Model.GetId()/items" method="post">
+    <input id='categoryId' name='categoryId' type='hidden' value='@Model.GetId()'>
+    <label for="itemDescription">Item Description</label>
+    <input id="itemDescription" name="itemDescription" type="text">
+    <label for='dueDate'>Due date</label>
+    <input id='dueDate' name='dueDate' type='date'>
+    <button type="submit">Add item</button>
+</form>
+
+
 @if (Model.Count == 0)
 {
     <p>You have no items in your to do list.</p>
