--- a/ToDoList/Views/Items/New.cshtml
+++ b/ToDoList/Views/Items/New.cshtml
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <title>To Do List</title>
-  </head>
-  <body>
+
+@{
+  Layout = "_Layout";
+}
+
     <h1>Add a new item to @Model.GetName()</h1>
 
     <form action="/categories/@Model.GetId()/items" method="post">
@@ -15,6 +13,3 @@
       <input id='dueDate' name='dueDate' type='date'>
       <button type="submit">Add item</button>
     </form>
-
-  </body>
-</html>
