--- a/ToDoList/Views/Categories/Delete.cshtml
+++ b/ToDoList/Views/Categories/Delete.cshtml
@@ -2,5 +2,5 @@
 @{
   Layout = "_Layout";
 }
-<h1>Your list has been cleared!</h1>
-<p><a href="/categories">Back to list.</a></p>
+<p>Your list has been cleared!</p>
+<a class="button" href="/categories/new">Add new</a>
