--- a/ToDoList/Views/Shared/_Layout.cshtml
+++ b/ToDoList/Views/Shared/_Layout.cshtml
@@ -9,7 +9,12 @@
   </head>
   <body>
       <div class="container">
-
+        <h1>To Do List</h1>
+        <nav>
+          <a href='/'>Home</a>
+          <a href='/categories'>Categories</a>
+      </nav>
+        @RenderBody()
       </div>
   </body>
 </html>
