--- a/ToDoList/Views/Items/Delete.cshtml
+++ b/ToDoList/Views/Items/Delete.cshtml
@@ -5,6 +5,7 @@
 <h2>Delete Item</h2>
 
 <p>Are you sure you want to delete @Model["item"].GetDescription()?</p>
-<form action="/categories/@Model["category"].GetId()/item/@Model["item"].GetId()/delete" method="post">
+
+<form action="/categories/@Model["category"].GetId()/items/@Model["item"].GetId()/delete" method="post">
     <button type="submit">Delete</button>
 </form>
