Added using statement to all .cshtml files - still cannot get list of items in category to work

--- a/ToDoList/Views/Items/Delete.cshtml
+++ b/ToDoList/Views/Items/Delete.cshtml
@@ -2,6 +2,8 @@
 @{
   Layout = "_Layout";
 }
+@using ToDoList.Models;
+
 <h2>Delete Item</h2>
 
 <p>Are you sure you want to delete @Model["item"].GetDescription()?</p>
