--- a/ToDoList/Views/Categories/Show.cshtml
+++ b/ToDoList/Views/Categories/Show.cshtml
@@ -2,13 +2,15 @@
 @{
   Layout = "_Layout";
 }
-<p>Here are all of the items in @Model["category"].GetName()</p>
+@using ToDoList.Models;
 
-@if (Model.Count == 0)
+<h2>@Model["category"].GetName()</h2>
+
+@if (Model["items"].Count == 0)
 {
     <p>You have no items in this category.</p>
 }
-@if(Model.Count != 0)
+@if(Model["items"].Count != 0)
 {
     <ol>
     @foreach (var item in @Model["items"])
