--- a/ToDoList/Views/Items/index.cshtml
+++ b/ToDoList/Views/Items/index.cshtml
@@ -19,7 +19,8 @@
 }
 
 </ul>
-<a href="/items/new">Add a new item.</a>
+
 <form action="/items/delete" method="post">
-  <button type="submit" name="button">Clear All Items</button>
+  <a class='button2' href="/items/new">Add new item</a>
+  <button type="submit" class="button2">Clear All Items</button>
 </form>
