--- a/ToDoList/Views/Categories/index.cshtml
+++ b/ToDoList/Views/Categories/index.cshtml
@@ -4,34 +4,16 @@
 }
 @using ToDoList.Models;
 
+<h2>Categories:</h2>
 
-
-
-@if (Model.Count == 0)
+@if (Model.Count != 0)
 {
-  <p>No categories have been added yet</p>
+  <ul>
+    @foreach (var category in Model)
+    {
+      <li><a href="/categories/@category.GetId()">@category.GetName()</a></li>
+    }
+  </ul>
 }
-@if(Model.Count != 0)
-{
-  <table>
-    <tr>
-      <th>Category</th>
-    </tr>
-  @foreach (Category category in Model)
-  {
-    <tr>
-      <td><a href='/categories/@category.GetId()'>@category.GetName()</a></td>
-    </tr>
-  }
-  </table>
-}
-<br/>
-<form action="/categories/delete" method="post">
-<a class="button" href="/categories/new">Add new</a>
 
-<button type="submit" id="deleteall" name="button">Delete all</button>
-</form>
-        </td>
-    </tr>
-</table>
-
+<h4><a href="/categories/new">Add a new category</a></h4>
