--- a/ToDoList/Views/Items/Show.cshtml
+++ b/ToDoList/Views/Items/Show.cshtml
@@ -4,9 +4,30 @@
 }
 @using ToDoList.Models;
 
-<h2>@Model["category"].GetName()</h2>
-<p>@Model["item"].GetDescription()
+<h3>@Model["selectedItem"].GetDescription()</h3>
 
+@if (@Model["itemCategories"].Count != 0)
+{
+  <h4>This item has these categories:</h4>
+  <ul>
+    @foreach (Category category in @Model["itemCategories"])
+    {
+      <li>@category.GetName()</li>
+    }
+  </ul>
+}
+
+<h4>Add a category to this item:</h4>
+<form action='/items/@Model["selectedItems"].GetId()/categories/new' method='post'>
+  <label for='categoryId'>Select a category:</label>
+  <select id='categoryId' name='categoryId' type='text'>
+    @foreach (var category in @Model["allCategories"])
+    {
+      <option value='@category.GetId()'>@category.GetName()</option>
+    }
+  </select>
+  <button type='submit'>Add</button>
+</form>
 <a class = "button" href='/categories/@Model["category"].GetId()/items/@Model["item"].GetId()/edit'>Edit Item</a><br />
 </p>
 <a class = "button" href='/categories/@Model["category"].GetId()/items/@Model["item"].GetId()/delete'>Delete Item</a>
