--- a/ToDoList/Views/Items/Show.cshtml
+++ b/ToDoList/Views/Items/Show.cshtml
@@ -18,7 +18,7 @@
 }
 
 <h4>Add a category to this item:</h4>
-<form action='/items/@Model["selectedItems"].GetId()/categories/new' method='post'>
+<form action='/items/@Model["selectedItem"].GetId()/categories/new' method='post'>
   <label for='categoryId'>Select a category:</label>
   <select id='categoryId' name='categoryId' type='text'>
     @foreach (var category in @Model["allCategories"])
@@ -28,8 +28,3 @@
   </select>
   <button type='submit'>Add</button>
 </form>
-<a class = "button" href='/categories/@Model["category"].GetId()/items/@Model["item"].GetId()/edit'>Edit Item</a><br />
-</p>
-<a class = "button" href='/categories/@Model["category"].GetId()/items/@Model["item"].GetId()/delete'>Delete Item</a>
-
-<a class = "button" href='/categories/@Model["category"].GetId()/items/new'>Add item</a><br />
