--- a/ToDoList/Views/Shared/_Layout.cshtml
+++ b/ToDoList/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <nav>
           <a href='/'>Home</a>
           <a href='/categories'>Categories</a>
-          <a href='/items'>All Items</a>
+          <a href='/items/new'>Add item</a><a href='/items'>All Items</a>
       </nav>
         @RenderBody()
       </div>
