--- a/ToDoList/wwwroot/css/styles.css
+++ b/ToDoList/wwwroot/css/styles.css
@@ -24,7 +24,7 @@ nav {
     /* text-align: center; */
     margin-left: 15px;
 }
-nav a, button, .button, .button2 {
+button, .button, .button2 {
     width: 90px;
     height: 30px;
     border:#400080 1px solid;
@@ -38,13 +38,36 @@ nav a, button, .button, .button2 {
     cursor: pointer;
     font-size: 14px;
 }
+nav a {
+    background-color: #bda5d6f6;
+    padding:0;
+    margin:0;
+    color: #400080;
+    text-align: center;
+    display: inline-block;
+    cursor: pointer;
+}
 .button2 {
     width: 120px;
 }
 a:hover {
-    color: #400080;
+    background-color: #400080;
+    color: white;
     text-decoration: none;
 }
 .deleteall{
     margin-top: 20px;
 }
+@media screen and (min-width: 600px) {
+    nav a {
+      width: 120px;
+      border-bottom: none;
+      height: 50px;
+      line-height: 50px;
+      font-size: 1em;
+    }
+     nav a {
+      display: inline-block;
+      margin-right: -4px;
+    }
+  }
