Added Edit Description functionality

--- a/ToDoList/Views/Items/Show.cshtml
+++ b/ToDoList/Views/Items/Show.cshtml
@@ -4,8 +4,8 @@
 }
 @using ToDoList.Models;
 
-<h3>@Model["selectedItem"].GetDescription()</h3>
-
+<h3 class="list">@Model["selectedItem"].GetDescription()</h3>
+<a class="button" href='/items/@Model["selectedItem"].GetId()/edit'>Edit</a>
 @if (@Model["itemCategories"].Count != 0)
 {
   <h4>This item has these categories:</h4>
