--- a/ToDoList/Views/Items/Edit.cshtml
+++ b/ToDoList/Views/Items/Edit.cshtml
@@ -4,12 +4,11 @@
 }
 @using ToDoList.Models;
 
-<h2>Edit item: @Model["item"].GetDescription()</h2>
+<h2>Edit item: @Model.GetDescription()</h2>
 
-<form action="/categories/@Model["category"].GetId()/items/@Model["item"].GetId()" method="post">
+<form action="/items/@Model.GetId()" method="post">
     <label for="newDescription">Name:</label>
-    <input type="text" name="newDescription" value="@Model["item"].GetDescription()">
+    <input type="text" name="newDescription" value="@Model.GetDescription()">
     <button type="submit">Update</button>
 </form>
 
-<h4><a href="/categories/@Model["category"].GetId()/items/@Model["item"].GetId()">Return to previous page</a></h4>
