--- a/ToDoList/Views/Items/index.cshtml
+++ b/ToDoList/Views/Items/index.cshtml
@@ -20,7 +20,6 @@
 
 </ul>
 
-<form action="/items/delete" method="post">
-  <a class='button2' href="/items/new">Add new item</a>
+<form action="/items/deleteAll" method="post">
   <button type="submit" class="button2">Clear All Items</button>
 </form>
