Added styling for individual item page

--- a/ToDoList/Views/Categories/New.cshtml
+++ b/ToDoList/Views/Categories/New.cshtml
@@ -8,6 +8,6 @@
 
 <form action="/categories" method="post">
   <label for="categoryName">Category name</label>
-  <input id="categoryName" name="categoryName" type="text">
+  <input id="categoryName" name="categoryName" type="text" required>
   <button type="submit">Add</button>
 </form>
