--- a/ToDoList/Views/Categories/index.cshtml
+++ b/ToDoList/Views/Categories/index.cshtml
@@ -16,4 +16,6 @@
   </ul>
 }
 
-<h4><a href="/categories/new">Add a new category</a></h4>
+
+<h4><a class="button2" href="/categories/new">Add new category</a></h4>
+
