--- a/ToDoList/wwwroot/css/styles.css
+++ b/ToDoList/wwwroot/css/styles.css
@@ -1,7 +1,8 @@
 h1 {
     color: blueviolet;
     margin-left: 15px;
-    /* text-align: center; */
+    text-align: center;
+    text-shadow: #40008088 5px 2px;
 }
 h2 {
     margin-top: 20px;
@@ -10,6 +11,10 @@ h2 {
 }
 h4 {
     font-size: 1em;
+}
+
+h2, h5 {
+    text-align: center;
 }
 td {
     padding: 5px;
@@ -22,12 +27,12 @@ th {
 }
 nav {
     /* text-align: center; */
-    margin-left: 15px;
+    margin-left: 150px;
 }
 button, .button, .button2 {
     width: 90px;
     height: 30px;
-    border:#400080 1px solid;
+    /* border:#400080 1px solid; */
     text-align: center;
     margin-bottom: 20px;
     padding-top: 3px;
@@ -37,6 +42,7 @@ button, .button, .button2 {
     display: inline-block;
     cursor: pointer;
     font-size: 14px;
+    border-radius: 5px;
 }
 nav a {
     background-color: #bda5d6f6;
@@ -54,9 +60,10 @@ a:hover {
     text-decoration: none;
 }
 
+
 @media screen and (min-width: 600px) {
     nav a {
-      width: 120px;
+      width: 200px;
       border-bottom: none;
       height: 50px;
       line-height: 50px;
@@ -64,7 +71,7 @@ a:hover {
     }
      nav a {
       display: inline-block;
-      margin-right: -4px;
+      margin-right: -5px;
     }
   }
 .list {
@@ -77,4 +84,19 @@ a:hover {
 }
 .deleteall{
     margin-top: 20px;
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 3%;
+    align-items: center;
+}
+.g1{
+    padding-left: 50%;
+    margin-top: 7%;
+}
+.g3{
+    padding-right: 50%;
+    margin-top: 7%;
 }
