--- a/ToDoList/Views/Items/Edit.cshtml
+++ b/ToDoList/Views/Items/Edit.cshtml
@@ -3,12 +3,13 @@
   Layout = "_Layout";
 }
 @using ToDoList.Models;
+<div class="grid">
+  <h2>Edit item: @Model.GetDescription()</h2>
 
-<h2>Edit item: @Model.GetDescription()</h2>
-
-<form action="/items/@Model.GetId()" method="post">
-    <label for="newDescription">Name:</label>
-    <input type="text" name="newDescription" value="@Model.GetDescription()">
-    <button type="submit">Update</button>
-</form>
+  <form action="/items/@Model.GetId()" method="post">
+      <label for="newDescription">Name:</label>
+      <input type="text" name="newDescription" value="@Model.GetDescription()">
+      <button type="submit">Update</button>
+  </form>
+</div>
 
