--- a/ToDoList/Views/Items/index.cshtml
+++ b/ToDoList/Views/Items/index.cshtml
@@ -3,23 +3,28 @@
   Layout = "_Layout";
 }
 @using ToDoList.Models;
+<div class ="grid">
+  <div>
+  <ul>
 
-<ul class="list">
-
-@if (Model.Count == 0)
-{
-  <p>You have no items in your to do list!</p>
-}
-@if (Model.Count !=0)
-{
-  @foreach (Item item in Model)
+  @if (Model.Count == 0)
   {
-  <li><a href='/items/@item.GetId()'>@item.GetDescription() @item.GetDueDate().ToString("MM/dd/yyyy")</a></li>
+    <p>You have no items in your to do list!</p>
   }
-}
+  @if (Model.Count !=0)
+  {
+    @foreach (Item item in Model)
+    {
+    <li><a href='/items/@item.GetId()'>@item.GetDescription() @item.GetDueDate().ToString("MM/dd/yyyy")</a></li>
+    }
+  }
 
-</ul>
-
+  </ul>
+  </div>
+  <div>
+    
+  </div>
 <form action="/items/deleteAll" method="post">
   <button type="submit" class="button2">Clear All Items</button>
 </form>
+</div>
