--- a/ToDoList/Views/Categories/index.cshtml
+++ b/ToDoList/Views/Categories/index.cshtml
@@ -4,18 +4,29 @@
 }
 @using ToDoList.Models;
 
-<h2>Categories:</h2>
 
-@if (Model.Count != 0)
-{
-  <ul>
-    @foreach (var category in Model)
+
+<div class="grid">
+  <div class="middle-of-columns">
+    <h2>Categories</h2>
+  </div>
+  <div class="middle-of-columns">
+    @if (Model.Count != 0)
     {
-      <li><a href="/categories/@category.GetId()">@category.GetName()</a></li>
+      <ul>
+        @foreach (var category in Model)
+        {
+          <li><a href="/categories/@category.GetId()">@category.GetName()</a></li>
+        }
+      </ul>
     }
-  </ul>
-}
+  </div>
+  <div class="middle-of-columns">
+    <h4><a class="button2" href="/categories/new">Add new category</a></h4>
+  </div>
+</div>
 
 
-<h4><a class="button2" href="/categories/new">Add new category</a></h4>
+
+
 
