--- a/ToDoList/wwwroot/css/styles.css
+++ b/ToDoList/wwwroot/css/styles.css
@@ -12,8 +12,7 @@ h2 {
 h4 {
     font-size: 1em;
 }
-
-h2, h5 {
+h5 {
     text-align: center;
 }
 td {
@@ -25,10 +24,7 @@ table {
 th {
     text-align: center;
 }
-nav {
-    /* text-align: center; */
-    margin-left: 150px;
-}
+
 button, .button, .button2 {
     width: 90px;
     height: 30px;
@@ -44,6 +40,11 @@ button, .button, .button2 {
     font-size: 14px;
     border-radius: 5px;
 }
+nav {
+    /* text-align: center; */
+    margin-left: 225px;
+    margin-bottom: 30px;
+}
 nav a {
     background-color: #bda5d6f6;
     padding:0;
@@ -54,7 +55,7 @@ nav a {
     cursor: pointer;
 }
 
-a:hover {
+a:hover, button:hover {
     background-color: #400080;
     color: white;
     text-decoration: none;
@@ -80,7 +81,7 @@ a:hover {
 }
 
 .button2 {
-    width: 120px;
+    width: 130px;
 }
 .deleteall{
     margin-top: 20px;
@@ -95,20 +96,24 @@ a:hover {
 }
 .g1{
     padding-left: 50%;
-    margin-top: 7%;
+    margin-top: 12%;
 }
 .g3{
     padding-right: 50%;
-    margin-top: 7%;
+    margin-top: 12%;
 }
-
+.justify-right {
+    justify-items: right;
+}
 .middle-of-columns {
     grid-column: 2/3;
+    align-items: center;
+    justify-items: right; 
 }
 .nested {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column: 1/3;
     align-items: center;
-    justify-items: center;    
+    justify-items: right;    
 }
